--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bootstrap": "^5.2.2",
     "html": "^1.0.0",
     "jquery": "^3.6.1",
+    "ngx-colors": "^3.1.0",
     "ngx-highlightjs": "^5.0.0",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
